--- a/app/views/caseaccess/pages/PA-00321-2018-request-error-2.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error-2.html
@@ -119,6 +119,7 @@ Case details
             <option value="/caseaccess/pages/PA-00321-2018-request">No errors</option>
             <option value="/caseaccess/pages/PA-00321-2018-request-error">Missing selection</option>
             <option value="/caseaccess/pages/PA-00321-2018-request-error-2">Missing reason text</option>
+            <option value="/caseaccess/pages/PA-00321-2018-request-error-3">Missing case reference</option>
             </select>
         </form>
         {% endblock %}
