--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -26,7 +26,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=judiciary&">Request access</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=judiciary&">Request access error no selection</a><br>Challanged access - Flow request error</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error-2?usertype=judiciary&">Request access error missing reason</a><br>Challanged access - Flow request error</br></p>
-
+  <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error-3?usertype=judiciary&">Request access error missing case reference</a><br>Challanged access - Flow request error</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=judiciary&">Confirmation</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=judiciary&">Case details</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-r?usertype=judiciary&">My access</a><br>Challanged access - shown in situe</br></p>
@@ -153,6 +153,8 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=staff&">Request access</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=staff&">Request access error no selection</a><br>Challanged access - Flow request error</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error-2?usertype=staff&">Request access error missing reason</a><br>Challanged access - Flow request error</br></p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error-3?usertype=staff&">Request access error missing case reference</a><br>Challanged access - Flow request error</br></p>
+
 <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=staff&">Confirmation</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-r?usertype=staff&">My access</a><br>Challanged access - shown in situe</br></p>
