--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -29,6 +29,7 @@ Refunds
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case ID</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Refund reference</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Reason</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Submitted by</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date updated</button></th>
@@ -38,6 +39,7 @@ Refunds
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-1567</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">RF-1324-6846-2454-5445</td>
           <td class="govuk-table__cell">Case withdrawn</a>
           <td class="govuk-table__cell">Tom Jones</a>
           <td class="govuk-table__cell">{{govukTag({
