--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -90,7 +90,7 @@ Case details
         <div class="govuk-details__text" style="width: 780px;">
             <p>You can use an asterisk (*) to search for:</p>
             <ul>
-                <li>one or more unknown characters in any part of a word, for example ‘J* Smith</li>
+                <li>one or more unknown characters in any part of a word, for example ‘J* Smith'</li>
                 <li>a missing word, for example ‘John *’</li>
             </ul>
 
@@ -99,7 +99,7 @@ Case details
             <ul>
                 <li>16-digit case reference</li>
                 <li>other reference</li>
-                <li>name</li>
+                <li>full name</li>
                 <li>first line of address</li>
             </ul>
 
@@ -151,7 +151,7 @@ Case details
                         Other reference
                     </label>
                     <div id="otherref-hint" class="govuk-hint" style="width: 900px;">
-                        Any other reference to identify a case, for example National Insurance number or heritage system reference.
+                        Any other reference to identify a case, for example National Insurance number or system reference.
                     </div>
                     <input class="govuk-input govuk-input--width-10" id="otherref" name="otherref" type="text" spellcheck="false"  value="{{ data.otherref }}">
                 </div>
