--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -81,6 +81,8 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=judiciary&">Grant duration of case access error</a><br>specific access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Case view - Access approved</a><br>specific access - Flow approve<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow approve</p>
+
+
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
         <!-- SECTION BREAK -->
@@ -90,6 +92,11 @@ GOV.UK Prototype Kit
       <!--  <p><a target="_blank" href="/caseaccess/pages/email-approved-s?usertype=judiciary&">Email confirmation</a><br>specific access request approved<br></p> -->
         <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=judiciary&">My access</a><br>specific access - Flow request<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>specific access - Flow request approved</p>
+
+
+  <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc?usertype=judiciary&">Case view</a><br>specific access - Flow request approved - Banner senario 1</p>
+    <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc-m2?usertype=judiciary&">Case view</a><br>specific access - Flow request approved - Banner senario 2</p>
+      <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc-m3?usertype=judiciary&">Case view</a><br>specific access - Flow request approved - Banner senario 3</p>
 
         <!-- SECTION BREAK -->
 
@@ -215,6 +222,11 @@ GOV.UK Prototype Kit
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved-st?usertype=judiciary&">Email confirmation</a><br>specific access request approved<br></p> -->
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">My access</a><br>specific access - Flow request<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>specific access - Flow request approved</p>
+
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc?usertype=staff&">Case view</a><br>specific access - Flow request approved - Banner senario 1</p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc-m2?usertype=staff&">Case view</a><br>specific access - Flow request approved - Banner senario 2</p>
+              <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-atc-m3?usertype=staff&">Case view</a><br>specific access - Flow request approved - Banner senario 3</p>
+
 
           <!-- SECTION BREAK -->
 
