--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (07/07/21)
+      Last updated (13/07/21)
     </h2>
     <p class="govuk-body-l">Page widths have been increased to new wider width.<br><span style="color: red">Email confirmations removed & pending reinstated</span></p>
     <div style="display: flex; margin-top: 80px;">
@@ -141,10 +141,10 @@ GOV.UK Prototype Kit
         <!-- SECTION BREAK -->
 
         <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
-          <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p>
+  <!--        <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
         <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access</br></p>
       <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
-        <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=judiciary&">Booking UI</a><br>Return post logout - single</br></p>
+  <!--      <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=judiciary&">Booking UI</a><br>Return post logout - single</br></p> -->
     <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=judiciary&">Booking UI</a><br>Return post logout - multi</br></p>
        <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=judiciary&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
     -->  </div>
@@ -271,10 +271,10 @@ GOV.UK Prototype Kit
           <!-- SECTION BREAK -->
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
-          <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
           <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access</br></p>
         <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
-          <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p> -->
       <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
          <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=staff&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
       -->  </div>
