--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -26,7 +26,7 @@ Refunds
       <select class="govuk-select" id="sort" name="sort">
         <option>All caseworkers</option>
         <option>Steve Smith</option>
-        <option>Tom Jones</option>
+        <option>Loren Barrow</option>
       </select>
     </div>
 
@@ -65,7 +65,7 @@ Refunds
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">3164-1234-5845-4819</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">RF-1324-6846-2454-5445</td>
           <td class="govuk-table__cell">Remission granted</a>
-          <td class="govuk-table__cell">Tom Jones</a>
+          <td class="govuk-table__cell">Loren Barrow</a>
           <td class="govuk-table__cell"> {{govukTag({
           text: now | date( 'subtract', 5, 'days' ) | date,
           classes: "govuk-tag--grey"
@@ -100,7 +100,7 @@ Refunds
       <select class="govuk-select" id="sort" name="sort">
         <option>All caseworkers</option>
         <option>Steve Smith</option>
-        <option>Tom Jones</option>
+        <option>Loren Barrow</option>
       </select>
     </div>
 
@@ -121,7 +121,7 @@ Refunds
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-1567</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">RF-1324-6846-2454-5445</td>
           <td class="govuk-table__cell">Case withdrawn</a>
-          <td class="govuk-table__cell">Tom Jones</a>
+          <td class="govuk-table__cell">Loren Barrow</a>
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'subtract', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
