prep states for working group on case search

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -34,7 +34,10 @@
             <h2 class="govuk-heading-m">Duel running - Case list and work allocation</h2>
 
             <p style="margin-bottom:10px; margin-top: 25px;">Staff</p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/caselistonly?usertype=staff&selectedtab=caselist&">Caselist ONLY</a></p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/available-tasks-sscs-testingonly?usertype=staff&selectedtab=mywork&">Work allocation ONLY</a></p>
             <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/caselist?usertype=staff&selectedtab=caselist&">Caselist</a></p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/findcase?usertype=staff&selectedtab=caselist&">Find case</a></p>
             <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/available-tasks-sscs-testing?usertype=staff&selectedtab=mywork&">My work (work Allocation)</a></p>
             <p><a  target="_blank"  href="/searchcases/transition/search?usertype=staff&selectedtab=search&">Search input</a></p>
 
