--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -5,7 +5,7 @@ Refunds
 {% block content %}
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
-    <h2 class="govuk-heading-l">Refunds returned from approval</h2>
+    <h2 class="govuk-heading-l">Refunds returned to caseworker</h2>
   </div>
 </div>
 
