--- a/app/views/caseaccess/pages/booking-location-opt1.html
+++ b/app/views/caseaccess/pages/booking-location-opt1.html
@@ -16,11 +16,11 @@ Case details
 <div class="govuk-form-group">
     <span class="govuk-caption-l">Work access</span>
   <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="event-name">
-      What is the name of the crown or county court location?
+      What is the name of the location?
     </label>
   </h1>
   <div id="event-name-hint" class="govuk-hint">
-    For example, Birmingham
+    For example, Exeter
   </div>
   <input class="govuk-input" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
