--- a/app/views/caseaccess/pages/booking-location-opt1b.html
+++ b/app/views/caseaccess/pages/booking-location-opt1b.html
@@ -14,19 +14,12 @@ Case details
 
   <span class="govuk-caption-l">Work access</span>
 {% set setDuration %}
-{{ govukDateInput({
-  id: "passport-issued",
-  namePrefix: "passport-issued",
-  fieldset: {
-    legend: {
-      text: "Access starts",
-      classes: "govuk-fieldset__legend--m"
-    }
-  },
-  hint: {
-    text: "For example, 12 11 2007"
-  }
-}) }}
+
+<p class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24">Access starts</p>
+<p class="govuk-body govuk-!-font-weight-regular govuk-!-font-size-19">{{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</p>
+
+
+
 {{ govukDateInput({
 id: "passport-issued",
 namePrefix: "passport-issued",
@@ -40,6 +33,7 @@ hint: {
 text: "For example, 19 11 2007"
 }
 }) }}
+
 {% endset -%}
 {% set textHtml %}
 {{ govukInput({
@@ -51,6 +45,8 @@ text: "For example, 19 11 2007"
     text: "Mobile phone number"
   }
 }) }}
+
+
 {% endset -%}
 {{ govukRadios({
   idPrefix: "contact",
@@ -80,7 +76,7 @@ text: "For example, 19 11 2007"
       value: "phone",
       text: "Another period",
       hint: {
-    text: "You’ll need to provide both a start and end date."
+    text: "Starts from today and you’ll need to provide an and end date."
   },
       conditional: {
         html: setDuration
