--- a/app/views/caseaccess/pages/booking.html
+++ b/app/views/caseaccess/pages/booking.html
@@ -34,7 +34,7 @@ Case details
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/booking-opt2">
               <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                Access an existing booking loction
+                Access an existing booking location
               </label>
 
 
