--- a/app/views/searchcases/layoutstaffcaslistonly.html
+++ b/app/views/searchcases/layoutstaffcaslistonly.html
@@ -141,7 +141,7 @@
                     <div style="display: flex;flex-direction: row; ">
                         <ul class="hmcts-primary-navigation__list">
                             <li class="hmcts-primary-navigation__item" >
-                                <a class="hmcts-primary-navigation__link"  href="#">
+                                <a class="hmcts-primary-navigation__link"  href="/searchcases/transition/findcase">
                                     Find case
                                 </a>
                             </li>
