--- a/app/views/caseaccess/pages/booking-location-opt1b.html
+++ b/app/views/caseaccess/pages/booking-location-opt1b.html
@@ -74,7 +74,7 @@ text: "For example, 19 11 2007"
       value: "phone",
       text: "Another period",
       hint: {
-    text: "Starts from today and you’ll need to provide an and end date."
+    text: "Starts from today and you’ll need to provide an end date."
   },
       conditional: {
         html: setDuration
