--- a/app/views/caseaccess/pages/booking.html
+++ b/app/views/caseaccess/pages/booking.html
@@ -26,7 +26,7 @@ Case details
                 Start new booking
               </label>
               <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-        The court location where you'll be working
+        The location where you'll be working
         </div>
             </div>
             <div class="govuk-radios__item">
