--- a/app/views/caseaccess/pages/booking.html
+++ b/app/views/caseaccess/pages/booking.html
@@ -37,12 +37,12 @@ Case details
 
 
             </div>
-        <!--    <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
+        <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork-opt2">
               <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                Continue with existing booking
+                Access My Work
               </label>
-            </div> -->
+            </div>
           </div>
         </fieldset>
       </div>
