--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -27,7 +27,7 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
+              <a class="hmcts-sub-navigation__link" href="available-tasks-p">
                 Available tasks
               </a>
             </li>
