--- a/app/views/caseaccess/pages/booking-rtn.html
+++ b/app/views/caseaccess/pages/booking-rtn.html
@@ -35,7 +35,7 @@ Case details
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-            Continue with existing booking
+            Access My Work
           </label>
         </div>
       </div>
