--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
@@ -29,10 +29,10 @@ Case details
         <p class="govuk-body">Hearing judge</p>
 
       </dd>
-      <dd class="govuk-summary-list__actions">
+      <dd class="govuk-summary-list__actions"><!--
         <a class="govuk-link" href="wa-PA-00467-2017-ajndur">
           Change<span class="govuk-visually-hidden"> contact details</span>
-        </a>
+        </a>-->
       </dd>
     </div>
     <div class="govuk-summary-list__row">
@@ -43,10 +43,10 @@ Case details
         <p class="govuk-body">Judge Goodwin</p>
         <p class="govuk-body">judge.goodwin@example.com</p>
       </dd>
-      <dd class="govuk-summary-list__actions">
+      <dd class="govuk-summary-list__actions"><!--
         <a class="govuk-link" href="wa-PA-00467-2017-ajhan">
           Change<span class="govuk-visually-hidden"> contact details</span>
-        </a>
+        </a> -->
       </dd>
     </div>
 
