--- a/app/views/workallocation/pages/wa-myaccess-new-s.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-s.html
@@ -47,13 +47,13 @@ My work
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date submitted</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending">Case name</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">Jurisdiction</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">Case category</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">Date submitted</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">Access</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">Start</th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none">End</th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
         </tr>
       </thead>
@@ -62,7 +62,7 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-2017"><strong>Amelia Chu</strong></a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("subtract", 2, "day") | date( "D MMMM YYYY" ) }}</strong></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("subtract", 2, "day") | date( "D MMMM YYYY" ) }}</strong></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</strong></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 7, "day") | date( "D MMMM YYYY" ) }}</strong></td>
