--- a/app/views/workallocation/pages/wa-mycases-new-o.html
+++ b/app/views/workallocation/pages/wa-mycases-new-o.html
@@ -48,14 +48,13 @@ My work
   <table class="govuk-table ">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-      <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th> -->
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >Case name</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >Jurisdiction</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >Case category</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >Case role</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >Start</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" >End</th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;"></th>
       </tr>
     </thead>
     <tbody class="govuk-table__body">
